@@ -1,3 +1,10 @@
+2007-12-20 Denis Barbier <barbier@linuxfr.org>
+
+	* scripts/meshconvert
+	  src/meshconvert/__init__.py: Move scripts/meshconvert content
+	into __init__py; this way, meshconvert module can be imported
+	and run in interactive sessions.
+
 2007-12-18 Denis Barbier <barbier@linuxfr.org>
 
 	* src/meshconvert/obj.py: Partially implement reader and writer.
